--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -2998,9 +2998,11 @@ footer.main-footer .f-bct > span.bct {
 .invoice-table .select-amount {
   margin-top: -2px;
 }
-.invoice-table tbody .price {
+.invoice-table tbody .price,
+.invoice-table tbody .shop-name {
   margin: 8px 0;
   display: block;
+  line-height: 1;
 }
 .invoice-table .price {
   font-size: 14px;
@@ -3033,6 +3035,15 @@ footer.main-footer .f-bct > span.bct {
 .invoice-price-label {
   font-size: 14px;
   font-weight: bold;
+}
+.checkout-box-1 label {
+  text-decoration: underline;
+}
+.checkout-box-1 i {
+  color: #727272;
+}
+.checkout-box-1 span {
+  font-style: italic;
 }
 .m-product-list {
   width: 100%;
@@ -3074,10 +3085,10 @@ footer.main-footer .f-bct > span.bct {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  text-align: center;
 }
 .m-product-img img {
-  width: 100%;
-  min-height: 100%;
+  max-height: 100%;
 }
 .m-product-hover {
   opacity: 0;
@@ -5011,11 +5022,13 @@ h2.shop-name .shop-name-text {
   color: #b6b6b6;
 }
 .wrap-user {
-  width: 100%;
   min-height: 500px;
   float: left;
   margin-top: 35px;
   margin-bottom: 5px;
+  margin-left: -15px;
+  margin-right: -15px;
+  box-sizing: border-box;
 }
 .user-account-header {
   position: relative;
@@ -5045,9 +5058,6 @@ h2.shop-name .shop-name-text {
 .user-account-header .icon-tools li .icon.i-pin:before {
   width: 12px;
 }
-.user-account-img {
-  min-width: 165px;
-}
 .user-img {
   width: 121px;
   height: 121px;
@@ -5064,9 +5074,11 @@ h2.shop-name .shop-name-text {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 0;
+  line-height: 1.25;
 }
 .user-contact-info {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  line-height: 1.4;
 }
 .user-contact-info .mail-info {
   position: relative;
@@ -5078,7 +5090,9 @@ h2.shop-name .shop-name-text {
   left: -8px;
 }
 .user-account-change-nav {
-  padding: 0;
+  padding-left: 0;
+  margin-left: -10px;
+  margin-top: 2px;
 }
 .user-account-change-nav .nav {
   float: right;
@@ -5097,9 +5111,18 @@ h2.shop-name .shop-name-text {
   font-weight: 600;
 }
 .user-account-change-nav .nav li.more-nav a {
+  height: 34px;
+  overflow: hidden;
   color: #727272;
-  padding: 6px 15px;
+  padding: 7px 10px;
   border: 1px solid transparent;
+}
+.user-account-change-nav .nav li.more-nav a:hover {
+  border-radius: 3px;
+}
+.user-account-change-nav .nav li.more-nav a i:before {
+  font-size: 19px;
+  line-height: 1.2;
 }
 .user-account-nav {
   width: 100%;
@@ -5126,13 +5149,20 @@ h2.shop-name .shop-name-text {
   float: left;
   margin-top: 35px;
 }
+.order-content .load-more {
+  margin: 15px 0 5px;
+}
+.order-content .load-more .btn-loadmore {
+  border-width: 2px;
+  font-weight: 600;
+}
 .general-product-row .m-product-item {
   padding: 0;
   margin-bottom: 1px;
   padding-right: 1px;
 }
 .general-product-row .m-product-info {
-  padding: 10px;
+  padding: 0;
 }
 .user-head {
   width: 100%;
@@ -5163,7 +5193,7 @@ h2.shop-name .shop-name-text {
   width: 100%;
 }
 .order-list .item-property-values .property-select {
-  margin: 0px 4px 8px 0;
+  margin: 0px 7px 8px 0;
 }
 .order-list .item-property-values .property-select a {
   padding: 4px 8px;
@@ -5287,7 +5317,18 @@ h2.shop-name .shop-name-text {
 }
 .change-info-form .change-pass-link-btn {
   margin-left: 15px;
-  margin-top: 28px;
+  margin-top: 30px;
+  background: #f0f1f3;
+}
+.change-info-form .change-pass-link-btn:after {
+  content: "\f044";
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 15px;
+  color: #727272;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin-left: 12px;
 }
 .change-info-form .form-title {
   text-transform: uppercase;
@@ -5441,6 +5482,8 @@ h2.shop-name .shop-name-text {
     position: absolute;
     top: 0;
     right: 0;
+    width: auto;
+    margin: 0;
   }
 }
 @media (max-width: 991px) {
@@ -5485,13 +5528,12 @@ h2.shop-name .shop-name-text {
     height: 75px;
   }
   .user-account-header {
-    margin-top: 20px;
     margin-bottom: 20px;
   }
   .user-account-header .tool-info {
     width: 100%;
     float: left;
-    margin-top: 10px;
+    margin-top: 50px;
   }
   .user-account-header .tool-info li {
     margin-right: 0;
@@ -5502,23 +5544,43 @@ h2.shop-name .shop-name-text {
     display: none;
   }
   .user-name {
-    margin-bottom: 5px;
     font-size: 18px;
   }
   .user-contact-info .mail-info:before {
     display: none;
   }
-  .user-account-change-nav {
+  .address:before {
     display: none;
   }
+  .user-account-change-nav {
+    top: 70px;
+    right: auto;
+    left: 105px;
+  }
+  .user-account-change-nav .nav li {
+    display: inline-block;
+    background-color: #fff;
+  }
   .user-account-content {
-    padding-top: 20px;
+    margin-top: 15px;
   }
   .order-list {
     margin: 0;
   }
-  .address:before {
-    display: none;
+  .change-content .form-right {
+    padding: 0;
+  }
+  .change-content .form-right .change-pass-link-btn {
+    margin-left: 0;
+    margin-top: 20px;
+    width: 100%;
+  }
+  .order-status {
+    width: 100%;
+    float: left;
+    margin-right: 0;
+    margin-top: 10px;
+    padding: 0;
   }
 }
 .checkout-myface header .myfaceshop-logo,
