--- a/myface-onface-html/src/views/myface-checkout-step-1.html
+++ b/myface-onface-html/src/views/myface-checkout-step-1.html
@@ -6,7 +6,7 @@
 		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
 			<a href="index.html" title="myFace Shop">
 				<h1 class="logo-text">
-					<img class="" src="assets/images/logo/logo.png" alt="myface">	
+					<img class="" src="assets/images/logo/logo.png" alt="myface">
 				</h1>
 			</a>
 		</div>
@@ -274,6 +274,7 @@
 	</div>
 	<div class="col-xs-12 col-md-3">
 		<div class="box checkout-box-1">
+      <label class="chechout-box-note">Thông tin vận chuyển:</label>
 			<p>Đơn hàng của bạn cần trên <strong>150.000</strong>đ để được <strong>miễn phí</strong> vận chuyển tại TP.HCM, Hà Nội.</p>
 			<span>(trên <strong>300.000</strong>đ đối với Tỉnh/Thành khác)</span>
 		</div>
@@ -303,7 +304,7 @@
         	<div class="cart-row">
 	          <div class="cart-left">
 	          	<span class="gift-icon"></span>
-	          	<span class="amount">01 x</span> 
+	          	<span class="amount">01 x</span>
 	          	<span>Áo Sơ Mi Nam Dáng Ôm màu xanh dương</span>
 	          </div>
 	          <div class="cart-right">
@@ -313,7 +314,7 @@
         	{% for x in [1,2,3] %}
         	<div class="cart-row">
 	          <div class="cart-left">
-	          	<span class="amount">01 x</span> 
+	          	<span class="amount">01 x</span>
 	          	<span>Áo Sơ Mi Nam Dáng Ôm màu xanh dương</span>
 	          </div>
 	          <div class="cart-right">
