--- a/myface-onface-html/src/views/user-account-change-info.html
+++ b/myface-onface-html/src/views/user-account-change-info.html
@@ -18,7 +18,7 @@
 					<!--form-horizontal-->
 					<div class="form-horizontal change-info-form">
 						<h4 class="col-md-offset-1 form-title">Thay đổi thông tin</h4>
-						<div class="col-md-4 col-md-offset-1 form-left">
+						<div class="col-sm-6 col-md-4 col-md-offset-1 form-left">
 		    			<div class="form-group checkout-group-1">
 	              <label for="" class="control-label">Họ tên:</label>
 	              <input type="text" class="form-control" placeholder="Ví dụ: Nguyễn Văn A">
@@ -54,7 +54,7 @@
 		            <input type="submit" class="btn btn-primary update-p-form-btn" value="Cập nhật thông tin">
 	            </div>
 			    	</div>
-			    	<div class="col-md-2 form-right">
+			    	<div class="col-sm-3 col-md-2 form-right">
 			    		<a class="btn change-pass-link-btn" href="user-account-change-password.html">
 			    			Thay đổi mật khẩu
 			    		</a>
