--- a/myface-onface-html/src/views/user-account-gift-code.html
+++ b/myface-onface-html/src/views/user-account-gift-code.html
@@ -25,13 +25,13 @@
 						<div class="row giftcode-wrap">
 							<div class="col-md-5">
 								<div class="giftcode-block">
-									<div class="col-sm-6 giftcode-now">
+									<div class="col-xs-6 giftcode-now">
 										<p class="gift-title">Số myXu bạn đang có</p>
 										<div class="coin">
 											900
 										</div>
 									</div>
-									<div class="col-sm-6 giftcode-future">
+									<div class="col-xs-6 giftcode-future">
 										<p class="gift-title">Số myXu bạn sắp nhận được</p>
 										<div class="coin">
 											300
@@ -104,7 +104,7 @@
 											<tr class="new available">
 												<td>07/05/2016</td>
 												<td class="gift-des">
-													myFace dành tặng bạn Giftcode <strong>Face4554</strong>, giảm giá 100.000đ cho mọi đơn hàng trên 600.000đ. 
+													myFace dành tặng bạn Giftcode <strong>Face4554</strong>, giảm giá 100.000đ cho mọi đơn hàng trên 600.000đ.
 													<a class="" href="#">Chi tiết</a>
 												</td>
 												<td class="btn-tool">
@@ -117,7 +117,7 @@
 											<tr>
 												<td>07/05/2016</td>
 												<td class="gift-des">
-													myFace dành tặng bạn Giftcode <strong>Face4554</strong>, giảm giá 100.000đ cho mọi đơn hàng trên 600.000đ. 
+													myFace dành tặng bạn Giftcode <strong>Face4554</strong>, giảm giá 100.000đ cho mọi đơn hàng trên 600.000đ.
 													<a class="" href="#">Chi tiết</a>
 												</td>
 												<td class="btn-tool">
