--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -41,9 +41,9 @@
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+  text-align: center;
 	img {
-		width: 100%;
-		min-height: 100%;
+		max-height: 100%;
 	}
 }
 .m-product-hover {
@@ -129,7 +129,7 @@
   &.i-back {
   	&:before {
   		content: "\f104";
-  	}    
+  	}
   }
   &.i-share {
 		&:before {
