--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -112,6 +112,10 @@ img {
 .load-more {
   margin: 25px 0;
   text-align: center;
+  .btn-loadmore {
+    border-width: 2px;
+    font-weight: 600;
+  }
 }
 .fixed-block {
   position: fixed;
