--- a/myface-onface-html/src/views/user-account-address-book.html
+++ b/myface-onface-html/src/views/user-account-address-book.html
@@ -47,7 +47,7 @@
 						    	<p class="address-p-1">27A Hồ Văn Huê, P.6, Q. Phú Nhuận, TP, HCM</p>
 						    </li>
 						    <li class="col-sm-2">
-						   		<div class="box-tools pull-right">
+						   		<div class="box-tools">
 				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa" data-toggle="collapse" data-parent="#accordion" data-target="#accordion-1">
 				            	<i class="fa fa-edit" aria-hidden="true"></i>
 				            </button>
@@ -83,7 +83,7 @@
 						    	<p class="address-p-1">27A Hồ Văn Huê, P.6, Q. Phú Nhuận, TP, HCM</p>
 						    </li>
 						    <li class="col-sm-2">
-						   		<div class="box-tools pull-right">
+						   		<div class="box-tools">
 				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa" data-toggle="collapse" data-parent="#accordion" data-target="#accordion-2">
 				            	<i class="fa fa-edit" aria-hidden="true"></i>
 				            </button>
