--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -110,6 +110,10 @@ img {
   margin: 25px 0;
   text-align: center;
 }
+.load-more .btn-loadmore {
+  border-width: 2px;
+  font-weight: 600;
+}
 .fixed-block {
   position: fixed;
   right: 30px;
@@ -3273,6 +3277,7 @@ h2.shop-name .shop-name-text {
 }
 .product-detail img {
   margin: 15px auto;
+  display: block;
 }
 .product-detail .nav-tabs li {
   margin-bottom: 0;
@@ -4190,7 +4195,7 @@ h2.shop-name .shop-name-text {
   outline: 1px solid slategrey;
 }
 .btn-loadmore {
-  width: 500px;
+  width: 555px;
   height: 40px;
   padding-top: 9px;
   padding-bottom: 9px;
@@ -5023,12 +5028,15 @@ h2.shop-name .shop-name-text {
 }
 .wrap-user {
   min-height: 500px;
-  float: left;
   margin-top: 35px;
   margin-bottom: 5px;
-  margin-left: -15px;
-  margin-right: -15px;
-  box-sizing: border-box;
+  clear: both;
+}
+.wrap-user:before,
+.wrap-user:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 .user-account-header {
   position: relative;
@@ -5105,6 +5113,7 @@ h2.shop-name .shop-name-text {
 }
 .user-account-change-nav .nav li.change-info-btn.active {
   background-color: #dfdfdf;
+  border-radius: 3px;
 }
 .user-account-change-nav .nav li.change-info-btn.active a {
   color: #212121;
@@ -5144,6 +5153,19 @@ h2.shop-name .shop-name-text {
   color: #212121;
   font-weight: 600;
 }
+.user-account-nav .notifi-label {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  top: -11px;
+  right: 20px;
+  background-color: #3ac562;
+  color: #fff;
+  text-align: center;
+  line-height: 20px;
+  font-weight: 600;
+}
 .user-account-content {
   width: 100%;
   float: left;
@@ -5152,9 +5174,16 @@ h2.shop-name .shop-name-text {
 .order-content .load-more {
   margin: 15px 0 5px;
 }
-.order-content .load-more .btn-loadmore {
-  border-width: 2px;
-  font-weight: 600;
+.address-content .user-title {
+  margin-top: 0;
+}
+.address-content .form-wrap {
+  width: 100%;
+  float: left;
+  margin-top: 15px;
+}
+.address-content .form-horizontal .form-group:last-child {
+  margin-bottom: 0;
 }
 .general-product-row .m-product-item {
   padding: 0;
@@ -5183,7 +5212,7 @@ h2.shop-name .shop-name-text {
 }
 .order-list {
   display: block;
-  margin: 100px 0 60px;
+  margin: 115px 0 75px;
 }
 .order-list .item-property-label,
 .order-list .item-property-values {
@@ -5191,15 +5220,14 @@ h2.shop-name .shop-name-text {
 }
 .order-list .item-property-label {
   width: 100%;
+  padding-bottom: 0;
+  margin-bottom: 10px;
 }
 .order-list .item-property-values .property-select {
-  margin: 0px 7px 8px 0;
+  margin: 0px 10px 8px 0;
 }
 .order-list .item-property-values .property-select a {
   padding: 4px 8px;
-}
-.order-side {
-  margin-right: -30px;
 }
 .order-list-more {
   text-decoration: underline;
@@ -5335,9 +5363,20 @@ h2.shop-name .shop-name-text {
   font-size: 16px;
   font-weight: 600;
 }
+.change-pass-content .form-title {
+  font-weight: 600;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 18px;
+}
+.change-pass-content .form-horizontal label {
+  font-weight: normal;
+  margin-bottom: 5px;
+}
 .address-list {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 25px;
   float: left;
 }
 .address-list .accordion-section {
@@ -5347,6 +5386,15 @@ h2.shop-name .shop-name-text {
 }
 .address-list .accordion-section:first-child .address {
   border-top: 1px solid #dfdfdf;
+}
+.address-list .box-tools {
+  margin-top: 5px;
+}
+.address-list .box-tools button {
+  padding: 0;
+}
+.address-list .box-tools button i {
+  font-size: 15px;
 }
 .accordion,
 .accordion * {
@@ -5459,7 +5507,7 @@ h2.shop-name .shop-name-text {
   color: #727272;
 }
 .giftcode-table-wrap .available .gift-date {
-  background-color: transparent;
+  background-color: #fff;
   color: #3ac562;
 }
 .remove-radio .checkbox {
@@ -5521,6 +5569,12 @@ h2.shop-name .shop-name-text {
   .user-account-content > div {
     padding: 0;
   }
+  .order-list {
+    margin: 20px 0 15px;
+  }
+  .order-list ul {
+    margin-bottom: 0;
+  }
 }
 @media (max-width: 767px) {
   .user-img {
@@ -5549,8 +5603,20 @@ h2.shop-name .shop-name-text {
   .user-contact-info .mail-info:before {
     display: none;
   }
+  .address {
+    padding-left: 0;
+  }
   .address:before {
     display: none;
+  }
+  .address .col-sm-2 {
+    width: 60px;
+    margin-top: 10px;
+    float: left;
+  }
+  .address .col-sm-4 {
+    float: right;
+    margin-top: 10px;
   }
   .user-account-change-nav {
     top: 70px;
@@ -5558,14 +5624,12 @@ h2.shop-name .shop-name-text {
     left: 105px;
   }
   .user-account-change-nav .nav li {
-    display: inline-block;
+    display: block;
+    float: left;
     background-color: #fff;
   }
   .user-account-content {
     margin-top: 15px;
-  }
-  .order-list {
-    margin: 0;
   }
   .change-content .form-right {
     padding: 0;
@@ -5581,6 +5645,51 @@ h2.shop-name .shop-name-text {
     margin-right: 0;
     margin-top: 10px;
     padding: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .wrap-user {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .user-account-left-side {
+    width: 480px;
+  }
+  .user-account-left-right {
+    width: 360px;
+    margin-left: 105px;
+  }
+  .add-address-form {
+    width: 70%;
+  }
+  .add-address-form .form-horizontal .col-sm-4 {
+    width: 42%;
+  }
+  .add-address-form .form-horizontal .col-sm-8 {
+    width: 58%;
+  }
+  .add-address-form .form-horizontal .col-sm-offset-4 {
+    margin-left: 42%;
+  }
+  .address-details .col-md-8 {
+    width: 70%;
+  }
+  .address-details .col-md-8 .form-horizontal .col-sm-4 {
+    width: 42%;
+  }
+  .address-details .col-md-8 .form-horizontal .col-sm-8 {
+    width: 58%;
+  }
+  .address-details .col-md-8 .form-horizontal .col-sm-offset-4 {
+    margin-left: 42%;
+  }
+  .update-p-form-btn {
+    width: 165px;
+    height: 42px;
+  }
+  .change-info-form .update-p-form-btn,
+  .change-pass-content .update-p-form-btn {
+    margin-top: 22px;
   }
 }
 .checkout-myface header .myfaceshop-logo,
