--- a/myface-onface-html/src/views/block/_account-nav.html
+++ b/myface-onface-html/src/views/block/_account-nav.html
@@ -15,6 +15,7 @@
 	    </li>
 	    <li class="{% if current_page == 'user-account-gift-code' %}active{% endif %}">
 	    	<a href="user-account-gift-code.html">Điểm thưởng - Điểm tích lũy</a>
+        <span class="notifi-label">3</span>
 	    </li>
 	  </ul>
 	</div>
