--- a/myface-onface-html/src/assets/less/style/plugin/rwd-table.less
+++ b/myface-onface-html/src/assets/less/style/plugin/rwd-table.less
@@ -1,54 +1,43 @@
-.rwd-table {
-  margin: 1em 0;
-  min-width: 300px;
-}
-.rwd-table tr {
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-}
-.rwd-table th {
-  display: none;
-}
-.rwd-table td {
-  display: block;
-}
-.rwd-table td:first-child {
-  padding-top: .5em;
-}
-.rwd-table td:last-child {
-  padding-bottom: .5em;
-}
-.rwd-table td:before {
-  content: attr(data-th) ": ";
-  font-weight: bold;
-  width: 6.5em;
-  display: inline-block;
-}
-@media (min-width: 480px) {
-  .rwd-table td:before {
-    display: none;
+@media (max-width: 480px) {
+  .rwd-table {
+    color: @text-color-2;
   }
-}
-.rwd-table th, .rwd-table td {
-  text-align: left;
-}
-@media (min-width: 480px) {
-  .rwd-table th, .rwd-table td {
-    display: table-cell;
-    padding: .25em .5em;
+  .rwd-table {
+    tbody {
+      tr {
+        border-top: @border;
+        border-color: @line-color-1;
+        td {
+          display: block;
+          border: 0 !important;
+        }
+      }
+    }
   }
-  .rwd-table th:first-child, .rwd-table td:first-child {
-    padding-left: 0;
+  .rwd-table th {
+    display: none !important;
   }
-  .rwd-table th:last-child, .rwd-table td:last-child {
-    padding-right: 0;
+  .rwd-table td:first-child {
+    padding: 8px;
   }
-}
-.rwd-table th, .rwd-table td {
-  margin: .5em 1em;
-}
-@media (min-width: 480px) {
-  .rwd-table th, .rwd-table td {
-    padding: 1em !important;
+  .rwd-table td:last-child {
+    padding: 8px;
+  }
+  .rwd-table td {
+    &:before {
+      content: attr(data-th) ": ";
+      font-weight: bold;
+      width: 130px;
+      display: table-cell;
+      color: @text-color-1;
+    }
+    > span,
+    > a {
+      display: table-cell;
+    }
+  }
+  .rwd-table th,
+  .rwd-table td {
+    text-align: left;
   }
 }
