--- a/myface-onface-html/src/views/user-account-order-info.html
+++ b/myface-onface-html/src/views/user-account-order-info.html
@@ -32,12 +32,12 @@
 					</div>
 				</div>
 				<div class="order-table-wrap">
-					<table class="table table-striped table-bordered order-table">
+					<table class="table table-striped table-bordered order-table rwd-table">
 						<thead>
 							<tr>
 								<th class="">Mã đơn hàng</th>
 								<th class="">Ngày đặt hàng</th>
-								<th class="">Sản phẩm mua</th>
+								<th class="col-md-4">Sản phẩm mua</th>
 								<th class="">Tổng thanh toán</th>
 								<th class="">Trạng thái đơn hàng</th>
 							</tr>
@@ -45,24 +45,24 @@
 						<tbody>
 							{% for x in [1,2,3,4,5]%}
 							<tr>
-								<td><a href="user-account-order-details.html" class="">#12486578929</a></td>
-								<td><span>04/11/2015</span></td>
-								<td class="col-md-4"><span>Bộ 3 nồi thủy tinh Amberline Luminarc</span></td>
-								<td>
+								<td data-th="Mã đơn hàng"><a href="user-account-order-details.html" class="">#12486578929</a></td>
+								<td data-th="Ngày đặt hàng"><span>04/11/2015</span></td>
+								<td data-th="Sản phẩm mua"><span>Bộ 3 nồi thủy tinh Amberline Luminarc</span></td>
+								<td data-th="Tổng thanh toán">
 									<span>1.000.000</span>
 								</td>
-								<td>
+								<td data-th="Trạng thái đơn hàng">
 									<span>Chưa giao hàng</span>
 								</td>
 							</tr>
 							<tr>
-								<td><a href="user-account-order-details.html" class="">#12486578929</a></td>
-								<td><span>07/05/2016</span></td>
-								<td><span>bộ bình ly Rotterdam Butterfly 5 món L4806 </span></td>
-								<td>
+								<td data-th="Mã đơn hàng"><a href="user-account-order-details.html" class="">#12486578929</a></td>
+								<td data-th="Ngày đặt hàng"><span>07/05/2016</span></td>
+								<td data-th="Sản phẩm mua"><span>bộ bình ly Rotterdam Butterfly 5 món L4806 </span></td>
+								<td data-th="Tổng thanh toán">
 									<span>1.000.000</span>
 								</td>
-								<td>
+								<td data-th="Trạng thái đơn hàng">
 									<span>Giao hàng thành công</span>
 								</td>
 							</tr>
