--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -53,7 +53,8 @@
       display: block;
     }
   }
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,
+              box-shadow ease-in-out .15s;
 }
 
 //Button color variations
