--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -12,6 +12,7 @@
 				</div>
 
 		    <div class="search-nav">
+          <a class="close-btn search-close" href="javascript:void(0)"></a>
 		      <div class="input-group header-search">
 						<div class="input-group-btn">
 							<select class="selectpicker cate-search">
@@ -33,6 +34,10 @@
 
 		    <div class="account-nav">
 		    	<ul class="nav navbar-nav">
+            <!--show-search-btn-->
+            <li class="show-search-btn">
+              <a class="show-search-active" href="javascript:void(0)"></a>
+            </li>
 		    		<!--account-block-->
 		        <li class="dropdown account-block">
 		          <a href="#" class="dropdown-toggle account-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
