--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -316,7 +316,6 @@ select.selectpicker {
   width: 100%;
 }
 .bootstrap-select.btn-group .dropdown-menu {
-  min-width: 100%;
   box-sizing: border-box;
 }
 .bootstrap-select.btn-group .dropdown-menu.inner {
@@ -2038,6 +2037,37 @@ select.selectpicker {
   float: left;
   padding: 0 0 0 18px;
 }
+.search-nav .close-btn {
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 10px;
+}
+@media (max-width: 767px) {
+  body.show-search {
+    overflow: hidden;
+  }
+  body.show-search .search-nav {
+    display: -webkit-flex;
+    display: flex;
+  }
+  .search-nav {
+    display: none;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    height: 100%;
+    padding: 70px 10px 0;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
+  }
+  .search-nav .close-btn {
+    display: block;
+  }
+}
 .header-search {
   width: 100%;
   border: 2px solid #ff5722;
@@ -2150,6 +2180,23 @@ select.selectpicker {
   color: #212121;
   background-color: transparent;
 }
+.account-nav .nav .show-search-btn {
+  display: none;
+}
+@media (max-width: 767px) {
+  .account-nav .nav .show-search-btn {
+    display: block;
+    width: auto;
+    float: left;
+  }
+  .account-nav .nav .show-search-btn a {
+    width: 40px;
+    height: 40px;
+    display: block;
+    background-image: url(../images/icons/search-show.png);
+    background-position: center;
+  }
+}
 .account-dropdown {
   top: 23px;
   left: auto;
@@ -2227,9 +2274,9 @@ select.selectpicker {
 .account-img {
   width: 38px;
   height: 38px;
+  margin-right: 8px;
   overflow: hidden;
   float: left;
-  margin-right: 8px;
   border-radius: 50%;
   background-color: #f0f1f3;
 }
@@ -4270,6 +4317,50 @@ h2.shop-name .shop-name-text {
   white-space: normal;
   height: 155px;
   padding: 0;
+}
+@media (max-width: 1199px) {
+  .account-nav {
+    width: auto;
+  }
+  .account-nav .nav {
+    margin: 0;
+  }
+  .account-nav .nav li.account-block,
+  .account-nav .nav li.cart-block {
+    width: auto;
+    float: left;
+  }
+  .account-nav .nav li.account-block > a,
+  .account-nav .nav li.cart-block > a {
+    padding: 0;
+  }
+  .account-nav .nav li.account-block > a.account-toggle,
+  .account-nav .nav li.cart-block > a.account-toggle {
+    width: auto;
+    padding: 0;
+  }
+  .account-nav .nav li .account-label {
+    display: none;
+  }
+  .account-nav .nav li .invoice-tracking {
+    display: none;
+  }
+  .wrap-banner {
+    height: auto;
+  }
+  .wrap-banner .banner-left,
+  .wrap-banner .banner-right {
+    width: 100%;
+  }
+  .wrap-banner .banner-1,
+  .wrap-banner .banner-2,
+  .wrap-banner .banner-3 {
+    height: auto;
+  }
+  .wrap-banner .banner-2,
+  .wrap-banner .banner-3 {
+    margin-top: 15px;
+  }
 }
 .category-1-name {
   width: 100%;
@@ -6451,53 +6542,4 @@ h2.shop-name .shop-name-text {
 #contact-modal .content-label .p-group-1 .btn {
   padding: 10px;
   width: 165px;
-}
-@media (max-width: 1199px) {
-  .account-nav {
-    width: auto;
-  }
-  .account-nav .nav {
-    margin: 0;
-  }
-  .account-nav .nav li.account-block,
-  .account-nav .nav li.cart-block {
-    width: auto;
-    float: left;
-  }
-  .account-nav .nav li.account-block > a,
-  .account-nav .nav li.cart-block > a {
-    padding: 0;
-  }
-  .account-nav .nav li.account-block > a.account-toggle,
-  .account-nav .nav li.cart-block > a.account-toggle {
-    width: auto;
-    padding: 0;
-  }
-  .account-nav .nav li .account-label {
-    display: none;
-  }
-  .account-nav .nav li .invoice-tracking {
-    display: none;
-  }
-  .wrap-banner {
-    height: auto;
-  }
-  .wrap-banner .banner-left,
-  .wrap-banner .banner-right {
-    width: 100%;
-  }
-  .wrap-banner .banner-1,
-  .wrap-banner .banner-2,
-  .wrap-banner .banner-3 {
-    height: auto;
-  }
-  .wrap-banner .banner-2,
-  .wrap-banner .banner-3 {
-    margin-top: 15px;
-  }
-}
-@media (max-width: 767px) {
-  .search-nav {
-    display: none;
-  }
 }
