--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -48,6 +48,37 @@
 	max-width: 760px;
 	float: left;
 	padding: 0 0 0 18px;
+  .close-btn {
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 10px;
+  }
+}
+@media (max-width: 767px) {
+  body.show-search {
+    overflow: hidden;
+    .search-nav {
+      display: -webkit-flex;
+      display: flex;
+    }
+  }
+  .search-nav {
+    display: none;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    height: 100%;
+    padding: 70px 10px 0;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
+    .close-btn {
+      display: block;
+    }
+  }
 }
 .header-search {
 	width: 100%;
@@ -172,6 +203,23 @@
 				}
 			}
 		}
+    .show-search-btn {
+      display: none;
+    }
+    @media (max-width: 767px) {
+      .show-search-btn {
+        display: block;
+        width: auto;
+        float: left;
+        a {
+          width: 40px;
+          height: 40px;
+          display: block;
+          background-image: url(../images/icons/search-show.png);
+          background-position: center;
+        }
+      }
+    }
 	}
 }
 .account-dropdown {
@@ -260,9 +308,9 @@
 .account-img {
 	width: 38px;
 	height: 38px;
+  margin-right: 8px;
 	overflow: hidden;
 	float: left;
-	margin-right: 8px;
 	border-radius: 50%;
 	background-color: @bg-color-3;
 	img {
